# erp42_ros

./: .dockerignore  .gitignore  README.md  docker_build.sh
.github/actions/: docker-build.yaml
.github/workflows/: colcon-build.yaml  docker-build.yaml
archive/erp42_description/: CMakeLists.txt  package.xml
archive/erp42_description/include/erp42_description/: vehicle_parameters.hpp
archive/erp42_description/launch/: vehicle_description.launch.py
archive/erp42_description/meshes/: erp42_rim.dae
archive/erp42_description/urdf/: erp42.urdf  erp42_wheel.xacro
archive/erp42_gazebo/: CMakeLists.txt  README.md  package.xml
archive/erp42_gazebo/launch/: gazebo.launch.py
archive/erp42_gazebo/rviz/: erp42_gazebo.rviz
archive/erp42_gazebo/src/: gazebo_bridge.cpp
archive/erp42_gazebo/urdf/: erp42_gazebo.xacro
archive/erp42_gazebo/worlds/: empty.world
docker/: Dockerfile  docker_build.sh  docker_run.sh
src/erp42_bringup/: CMakeLists.txt  README.md  package.xml
src/erp42_bringup/config/: erp42_bringup.param.yaml
src/erp42_bringup/launch/: erp42_bringup.launch.py  erp42_bringup.launch.xml  erp42_gui_control.launch.py  erp42_gui_control.launch.xml
src/erp42_cmake/: CMakeLists.txt  package.xml
src/erp42_cmake/cmake/: erp42_cmake_config_extras.cmake
src/erp42_description/: CMakeLists.txt  README.md  package.xml
src/erp42_description/include/erp42_description/: vehicle_parameters.hpp
src/erp42_description/launch/: vehicle_description.launch.py  vehicle_description.launch.xml
src/erp42_description/rviz/: vehicle_description.rviz
src/erp42_description/urdf/: erp42.xacro  erp42_model.xacro
src/erp42_gazebo/: CMakeLists.txt  README.md  REAME.md  package.xml
src/erp42_gazebo/config/: erp42_gazebo.param.yaml  gazebo.param.yaml
src/erp42_gazebo/include/erp42_gazebo/: gazebo_bridge.hpp
src/erp42_gazebo/launch/: erp42_gazebo.launch.py  erp42_gazebo.launch.xml
src/erp42_gazebo/node/: gazebo_bridge_node.cpp
src/erp42_gazebo/rviz/: erp42_gazebo.rviz
src/erp42_gazebo/src/: gazebo_bridge.cpp
src/erp42_gazebo/urdf/: erp42_gazebo.urdf  erp42_gazebo.xacro  erp42_gazebo_control.xacro
src/erp42_gazebo/worlds/: empty.world
src/erp42_gazebo_sim/: CMakeLists.txt  README.md  package.xml
src/erp42_gazebo_sim/config/: gazebo_sim_bridge.config.yaml
src/erp42_gazebo_sim/include/erp42_gazebo_sim/: erp42_control.hpp  erp42_gazebo_control.hpp
src/erp42_gazebo_sim/launch/: gazebo_sim.launch.py
src/erp42_gazebo_sim/plugins/: erp42_control.cpp  erp42_gazebo_control.cpp
src/erp42_gazebo_sim/rviz/: erp42_description.rviz
src/erp42_gazebo_sim/urdf/: erp42.xacro  erp42_chassis.xacro  erp42_description.xacro  erp42_front_wheel.xacro  erp42_rear_wheel.xacro
src/erp42_gazebo_sim/worlds/: empty.world
src/erp42_gui/: CMakeLists.txt  README.md  package.xml
src/erp42_gui/include/erp42_gui/: control_panel.hpp  controller.hpp  feedback_monitor.hpp
src/erp42_gui/node/: control_panel_node.cpp  controller_node.cpp  feedback_monitor_node.cpp
src/erp42_gui/src/: control_panel.cpp  controller.cpp  feedback_monitor.cpp
src/erp42_gui/ui/: control_panel.ui  controller.ui  feedback_monitor.ui
src/erp42_msgs/: CMakeLists.txt  README.md  package.xml
src/erp42_msgs/msg/: ControlCommand.msg  Feedback.msg
src/erp42_msgs/srv/: ModeCommand.srv
src/erp42_rqt_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/erp42_rqt_plugin/include/erp42_rqt_plugin/: control_panel_plugin.hpp  feedback_monitor_plugin.hpp
src/erp42_rqt_plugin/src/: control_panel_plugin.cpp  feedback_monitor_plugin.cpp
src/erp42_rqt_plugin/ui/: control_panel.ui  feedback_monitor.ui
src/erp42_serial/: CMakeLists.txt  README.md  package.xml
src/erp42_serial/config/: erp42_serial_bridge.param.yaml  serial_bridge.param.yaml
src/erp42_serial/include/erp42_serial/: serial_bridge.hpp  serial_packet.hpp  serial_port.hpp
src/erp42_serial/launch/: erp42_serial_bridge.launch.py  serial_bridge.launch.py  serial_bridge.launch.xml
src/erp42_serial/node/: serial_bridge_node.cpp
src/erp42_serial/src/: serial_bridge.cpp  serial_port.cpp
src/erp42_util/: CMakeLists.txt  package.xml
src/erp42_util/include/erp42_util/: erp42_parameters.hpp  exception.hpp  log.hpp  timer.hpp
src/erp42_util/src/: log.cpp  timer.cpp
