<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>erp42_gazebo</name>
    <version>0.0.0</version>
    <description>ERP42 ROS2 gazebo simulation package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilpro@sju.ac.kr">Minkyu Kil</maintainer>
    <author>Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclcpp           </depend>
    <depend>sensor_msgs      </depend>
    <depend>geometry_msgs    </depend>
    <depend>gazebo_msgs      </depend>
    <depend>erp42_util       </depend>
    <depend>erp42_msgs       </depend>
    <depend>erp42_description</depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>