<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>erp42_gazebo_sim</name>
    <version>0.0.0</version>
    <description>ERP42 gazebo-sim package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>erp42_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclcpp</depend>
    <depend>tf2_ros</depend>
    <depend>nav_msgs</depend>
    <depend>erp42_msgs</depend>
    <depend>erp42_util</depend>

    <!-- Execution dependencies -->
    <exec_depend>ros_gz</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>